# enjoy-cmake

./: README.md
example-01/: CMakeLists.txt  README.md  func1.c  func2.c
example-02/: CMakeLists.txt  README.md
example-02/src/base/: CMakeLists.txt  main.c
example-03/: CMakeLists.txt  README.md
example-03/lib/: CMakeLists.txt  calc.c  calc.h
example-03/src/base/: CMakeLists.txt  main.c
